# me

./: README.md  docker-compose.yml
.github/actions/: cdk-deploy.yml
.github/cdk-deploy/: action.yml
.github/configure-aws/: action.yml
.github/workflows/: dev.yml  on-tag.yml
cdk/: package.json
cdk/lib/: cognito-stack.ts  fargate-stack.ts  me-stack.ts  repo-stack.ts  utils.ts
client/: Dockerfile  README.md  nginx.conf  package.json
client/src/: App.tsx  amplify.ts  api.ts  axiosInstance.ts  index.tsx  models.d.ts  utils.ts
client/src/components/atoms/: Comment.tsx  Likes.tsx  NewComment.tsx
client/src/components/atoms/Comment/: Comment.tsx
client/src/components/atoms/Likes/: Likes.tsx
client/src/components/atoms/NewComment/: NewComment.tsx
client/src/components/molecules/: Comments.tsx  Likes.tsx
client/src/components/molecules/Comment/: Comment.tsx
client/src/components/molecules/Comments/: Comments.tsx
client/src/components/molecules/Likes/: Likes.tsx
client/src/components/organisms/: Contact.tsx  Education.tsx  Experience.tsx  Footer.tsx  Header.tsx  NavBar.tsx  Post.tsx  Skills.tsx  Summary.tsx
client/src/components/organisms/Comments/: Comments.tsx
client/src/components/organisms/Contact/: Contact.tsx
client/src/components/organisms/Education/: Education.tsx
client/src/components/organisms/Experience/: Experience.tsx
client/src/components/pages/: About.tsx  Post.tsx  Posts.tsx
server/: Cargo.toml  Dockerfile  README.md  me.db  pyproject.toml  resume.db
server/server/: main.py  models.py
(+10 files in other folders)
