[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Oliver Tucher <oliver.tucher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
uvicorn = "^0.27.0"
boto3 = "^1.34.40"

[tool.poetry.scripts]
server = "server.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^24.2.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
